:recycle: ConsoleInput 리팩토링
Signed-off-by: shirohoo <shirohoo4102@gmail.com>